// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engagement summary card matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card pf-m-compact"
        data-ouia-component-id="0"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        style="padding: 1rem;"
      >
        <div
          class="pf-c-card__title"
        >
          <div
            class="pf-l-level"
          >
            <div>
              <h3
                class="pf-c-title pf-m-lg"
                style="font-weight: normal;"
              >
                Engagement Summary
                  
                <svg
                  aria-describedby="pf-tooltip-1"
                  aria-hidden="true"
                  fill="green"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </h3>
            </div>
            <div />
          </div>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid pf-m-gutter"
          >
            <div
              class="pf-l-grid__item pf-m-12-col-on-md pf-m-12-col-on-lg"
              style="margin-bottom: 1rem;"
            >
              <b
                data-cy="upcoming"
                style="color: rgb(236, 122, 8);"
              >
                UPCOMING
              </b>
            </div>
            <div
              class="pf-l-grid__item pf-m-12-col-on-md pf-m-6-col-on-lg"
            >
              <div
                class="pf-l-grid pf-m-gutter"
              >
                <div
                  class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
                >
                  <div
                    class="pf-c-content"
                    data-cy="company_label"
                  >
                    <h6
                      class=""
                      data-pf-content="true"
                      style="margin-bottom: 0.1rem;"
                    >
                      Company
                    </h6>
                    <p
                      class=""
                      data-pf-content="true"
                    >
                      NASA
                    </p>
                  </div>
                </div>
                <div
                  class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
                >
                  <div
                    class="pf-c-content"
                    data-cy="project_label"
                  >
                    <h6
                      class=""
                      data-pf-content="true"
                      style="margin-bottom: 0.1rem;"
                    >
                      Project
                    </h6>
                    <p
                      class=""
                      data-pf-content="true"
                    >
                      Boots on the Moon
                    </p>
                  </div>
                </div>
                <div
                  class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
                >
                  <div
                    class="pf-c-content"
                    data-cy="location_label"
                  >
                    <h6
                      class=""
                      data-pf-content="true"
                      style="margin-bottom: 0.1rem;"
                    >
                      Location
                    </h6>
                    <p
                      class=""
                      data-pf-content="true"
                    >
                      Nashville, TN
                    </p>
                  </div>
                </div>
                <div
                  class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
                >
                  <div
                    class="pf-c-content"
                    data-cy="start_date_label"
                  >
                    <h6
                      class=""
                      data-pf-content="true"
                      style="margin-bottom: 0.1rem;"
                    >
                      Start Date
                    </h6>
                    <p
                      class=""
                      data-pf-content="true"
                    >
                      Jun 01, 2020
                    </p>
                  </div>
                </div>
                <div
                  class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
                >
                  <div
                    class="pf-c-content"
                    data-cy="end_date_label"
                  >
                    <h6
                      class=""
                      data-pf-content="true"
                      style="margin-bottom: 0.1rem;"
                    >
                      End Date
                    </h6>
                    <p
                      class=""
                      data-pf-content="true"
                    >
                      Jul 01, 2020
                    </p>
                  </div>
                </div>
                <div
                  class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
                >
                  <div
                    class="pf-c-content"
                    data-cy="created_by_label"
                  >
                    <h6
                      class=""
                      data-pf-content="true"
                      style="margin-bottom: 0.1rem;"
                    >
                      Created By
                    </h6>
                    dwasinge
                  </div>
                </div>
                <div
                  class="pf-l-grid__item pf-m-12-col-on-md"
                >
                  <div
                    class="pf-c-content"
                    data-cy="use_cases"
                  >
                    <h6
                      class=""
                      data-pf-content="true"
                      style="margin-bottom: 0.1rem;"
                    >
                      Use Cases
                    </h6>
                    <p>
                      an engagement use case
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-12-col-on-md pf-m-4-col-on-lg"
            >
              <div
                class="pf-c-content"
                data-cy="description_label"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Description
                </h6>
                <span
                  style="white-space: pre-line;"
                >
                  It's rocket science
                </span>
              </div>
            </div>
          </div>
        </div>
      </article>
    </div>
    <div />
  </body>,
  "container": <div>
    <article
      class="pf-c-card pf-m-compact"
      data-ouia-component-id="0"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      style="padding: 1rem;"
    >
      <div
        class="pf-c-card__title"
      >
        <div
          class="pf-l-level"
        >
          <div>
            <h3
              class="pf-c-title pf-m-lg"
              style="font-weight: normal;"
            >
              Engagement Summary
                
              <svg
                aria-describedby="pf-tooltip-1"
                aria-hidden="true"
                fill="green"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </h3>
          </div>
          <div />
        </div>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid pf-m-gutter"
        >
          <div
            class="pf-l-grid__item pf-m-12-col-on-md pf-m-12-col-on-lg"
            style="margin-bottom: 1rem;"
          >
            <b
              data-cy="upcoming"
              style="color: rgb(236, 122, 8);"
            >
              UPCOMING
            </b>
          </div>
          <div
            class="pf-l-grid__item pf-m-12-col-on-md pf-m-6-col-on-lg"
          >
            <div
              class="pf-l-grid pf-m-gutter"
            >
              <div
                class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
              >
                <div
                  class="pf-c-content"
                  data-cy="company_label"
                >
                  <h6
                    class=""
                    data-pf-content="true"
                    style="margin-bottom: 0.1rem;"
                  >
                    Company
                  </h6>
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    NASA
                  </p>
                </div>
              </div>
              <div
                class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
              >
                <div
                  class="pf-c-content"
                  data-cy="project_label"
                >
                  <h6
                    class=""
                    data-pf-content="true"
                    style="margin-bottom: 0.1rem;"
                  >
                    Project
                  </h6>
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    Boots on the Moon
                  </p>
                </div>
              </div>
              <div
                class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
              >
                <div
                  class="pf-c-content"
                  data-cy="location_label"
                >
                  <h6
                    class=""
                    data-pf-content="true"
                    style="margin-bottom: 0.1rem;"
                  >
                    Location
                  </h6>
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    Nashville, TN
                  </p>
                </div>
              </div>
              <div
                class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
              >
                <div
                  class="pf-c-content"
                  data-cy="start_date_label"
                >
                  <h6
                    class=""
                    data-pf-content="true"
                    style="margin-bottom: 0.1rem;"
                  >
                    Start Date
                  </h6>
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    Jun 01, 2020
                  </p>
                </div>
              </div>
              <div
                class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
              >
                <div
                  class="pf-c-content"
                  data-cy="end_date_label"
                >
                  <h6
                    class=""
                    data-pf-content="true"
                    style="margin-bottom: 0.1rem;"
                  >
                    End Date
                  </h6>
                  <p
                    class=""
                    data-pf-content="true"
                  >
                    Jul 01, 2020
                  </p>
                </div>
              </div>
              <div
                class="pf-l-grid__item pf-m-6-col-on-md pf-m-4-col-on-lg"
              >
                <div
                  class="pf-c-content"
                  data-cy="created_by_label"
                >
                  <h6
                    class=""
                    data-pf-content="true"
                    style="margin-bottom: 0.1rem;"
                  >
                    Created By
                  </h6>
                  dwasinge
                </div>
              </div>
              <div
                class="pf-l-grid__item pf-m-12-col-on-md"
              >
                <div
                  class="pf-c-content"
                  data-cy="use_cases"
                >
                  <h6
                    class=""
                    data-pf-content="true"
                    style="margin-bottom: 0.1rem;"
                  >
                    Use Cases
                  </h6>
                  <p>
                    an engagement use case
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-12-col-on-md pf-m-4-col-on-lg"
          >
            <div
              class="pf-c-content"
              data-cy="description_label"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Description
              </h6>
              <span
                style="white-space: pre-line;"
              >
                It's rocket science
              </span>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OpenShift Cluster Summary matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div />
      <article
        class="pf-c-card pf-m-compact"
        data-ouia-component-id="2"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        style="padding: 1rem;"
      >
        <div
          class="pf-c-card__title"
        >
          <div
            class="pf-l-level"
          >
            <div>
              <h3
                class="pf-c-title pf-m-lg"
                style="font-weight: normal;"
              >
                Hosting Environment
                  
                <div />
              </h3>
            </div>
            <div />
          </div>
        </div>
        <div
          class="pf-c-card__body"
        >
          <table
            aria-label="Engagement Hosting Environments"
            class="pf-c-table pf-m-grid-md pf-m-compact"
            data-ouia-component-id="2"
            data-ouia-component-type="PF4/Table"
            data-ouia-safe="true"
            role="grid"
          >
            <thead
              class=""
            >
              <tr>
                <th
                  class="pf-m-width-10"
                  data-key="0"
                  data-label=""
                />
                <th
                  class=""
                  data-key="1"
                  data-label="Environment Name"
                  scope="col"
                >
                  Environment Name
                </th>
                <th
                  class=""
                  data-key="2"
                  data-label="Hosting Type"
                  scope="col"
                >
                  Hosting Type
                </th>
                <th
                  class=""
                  data-key="3"
                  data-label="Version"
                  scope="col"
                >
                  Version
                </th>
                <th
                  class=""
                  data-key="4"
                  data-label="Cloud Provider"
                  scope="col"
                >
                  Cloud Provider
                </th>
                <th
                  class=""
                  data-key="5"
                  data-label="Actions"
                  scope="col"
                >
                  Actions
                </th>
              </tr>
            </thead>
            <tbody
              class=""
            >
              <tr
                class=""
                data-ouia-component-id="3"
                data-ouia-component-type="PF4/TableRow"
                data-ouia-safe="true"
              >
                <td
                  class=""
                  data-key="0"
                >
                  <svg
                    aria-describedby="pf-tooltip-3"
                    aria-hidden="true"
                    fill="green"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                      transform=""
                    />
                  </svg>
                </td>
                <td
                  class=""
                  data-key="1"
                  data-label="Environment Name"
                >
                  name
                </td>
                <td
                  class=""
                  data-key="2"
                  data-label="Hosting Type"
                >
                  Openshift Container Platform
                </td>
                <td
                  class=""
                  data-key="3"
                  data-label="Version"
                >
                  4.4
                </td>
                <td
                  class=""
                  data-key="4"
                  data-label="Cloud Provider"
                >
                  AWS
                </td>
                <td
                  class=""
                  data-key="5"
                  data-label="Actions"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <div />
    <article
      class="pf-c-card pf-m-compact"
      data-ouia-component-id="2"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      style="padding: 1rem;"
    >
      <div
        class="pf-c-card__title"
      >
        <div
          class="pf-l-level"
        >
          <div>
            <h3
              class="pf-c-title pf-m-lg"
              style="font-weight: normal;"
            >
              Hosting Environment
                
              <div />
            </h3>
          </div>
          <div />
        </div>
      </div>
      <div
        class="pf-c-card__body"
      >
        <table
          aria-label="Engagement Hosting Environments"
          class="pf-c-table pf-m-grid-md pf-m-compact"
          data-ouia-component-id="2"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe="true"
          role="grid"
        >
          <thead
            class=""
          >
            <tr>
              <th
                class="pf-m-width-10"
                data-key="0"
                data-label=""
              />
              <th
                class=""
                data-key="1"
                data-label="Environment Name"
                scope="col"
              >
                Environment Name
              </th>
              <th
                class=""
                data-key="2"
                data-label="Hosting Type"
                scope="col"
              >
                Hosting Type
              </th>
              <th
                class=""
                data-key="3"
                data-label="Version"
                scope="col"
              >
                Version
              </th>
              <th
                class=""
                data-key="4"
                data-label="Cloud Provider"
                scope="col"
              >
                Cloud Provider
              </th>
              <th
                class=""
                data-key="5"
                data-label="Actions"
                scope="col"
              >
                Actions
              </th>
            </tr>
          </thead>
          <tbody
            class=""
          >
            <tr
              class=""
              data-ouia-component-id="3"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class=""
                data-key="0"
              >
                <svg
                  aria-describedby="pf-tooltip-3"
                  aria-hidden="true"
                  fill="green"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </td>
              <td
                class=""
                data-key="1"
                data-label="Environment Name"
              >
                name
              </td>
              <td
                class=""
                data-key="2"
                data-label="Hosting Type"
              >
                Openshift Container Platform
              </td>
              <td
                class=""
                data-key="3"
                data-label="Version"
              >
                4.4
              </td>
              <td
                class=""
                data-key="4"
                data-label="Cloud Provider"
              >
                AWS
              </td>
              <td
                class=""
                data-key="5"
                data-label="Actions"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Point of Contact Card matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card pf-m-compact"
        data-ouia-component-id="5"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        style="padding: 1rem;"
      >
        <div
          class="pf-c-card__title"
        >
          <div
            class="pf-l-level"
          >
            <div>
              <h3
                class="pf-c-title pf-m-lg"
                style="font-weight: normal;"
              >
                Points of Contact
                  
                <svg
                  aria-describedby="pf-tooltip-6"
                  aria-hidden="true"
                  fill="green"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    transform=""
                  />
                </svg>
              </h3>
            </div>
            <div />
          </div>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-grid pf-m-gutter"
          >
            <div
              class="pf-l-grid__item pf-m-12-col-on-sm pf-m-4-col-on-md"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Engagement Lead
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Alice Doe
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-12-col-on-sm pf-m-4-col-on-md"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Technical Lead
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Eve Doe
                </p>
              </div>
            </div>
            <div
              class="pf-l-grid__item pf-m-12-col-on-sm pf-m-4-col-on-md"
            >
              <div
                class="pf-c-content"
              >
                <h6
                  class=""
                  data-pf-content="true"
                  style="margin-bottom: 0.1rem;"
                >
                  Customer Contact
                </h6>
                <p
                  class=""
                  data-pf-content="true"
                >
                  Bob Doe
                </p>
              </div>
            </div>
          </div>
        </div>
      </article>
    </div>
    <div />
  </body>,
  "container": <div>
    <article
      class="pf-c-card pf-m-compact"
      data-ouia-component-id="5"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      style="padding: 1rem;"
    >
      <div
        class="pf-c-card__title"
      >
        <div
          class="pf-l-level"
        >
          <div>
            <h3
              class="pf-c-title pf-m-lg"
              style="font-weight: normal;"
            >
              Points of Contact
                
              <svg
                aria-describedby="pf-tooltip-6"
                aria-hidden="true"
                fill="green"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  transform=""
                />
              </svg>
            </h3>
          </div>
          <div />
        </div>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-grid pf-m-gutter"
        >
          <div
            class="pf-l-grid__item pf-m-12-col-on-sm pf-m-4-col-on-md"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Engagement Lead
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Alice Doe
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-12-col-on-sm pf-m-4-col-on-md"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Technical Lead
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Eve Doe
              </p>
            </div>
          </div>
          <div
            class="pf-l-grid__item pf-m-12-col-on-sm pf-m-4-col-on-md"
          >
            <div
              class="pf-c-content"
            >
              <h6
                class=""
                data-pf-content="true"
                style="margin-bottom: 0.1rem;"
              >
                Customer Contact
              </h6>
              <p
                class=""
                data-pf-content="true"
              >
                Bob Doe
              </p>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
